--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: cpp
+
+os:
+  - linux
+  - osx
+
+compiler:
+  - gcc
+  - clang
+
 script:
-    - mkdir build && cd build
-    - cmake ../
+  - mkdir build && cd build
+  - cmake ../
