--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,31 @@ language: cpp
 git:
   depth: 5
 
-matrix:
+jobs:
   include:
     - os: linux
-      compiler:
-      - gcc
-      - clang
+      compiler: gcc
+      env: CXX_STANDARD=98
+
+    - os: linux
+      compiler: gcc
+      env: CXX_STANDARD=11
+
+    - os: linux
+      compiler: gcc
+      env: CXX_STANDARD=14
+
+    - os: linux
+      compiler: clang
+      env: CXX_STANDARD=14
 
     - os: osx
-      compiler:
-      - clang
+      compiler: clang
+      env: CXX_STANDARD=14
 
 script:
   - mkdir build
   - cd build
-  - cmake ../ -DCMAKE_CXX_STANDARD=11 -DCMAKE_BUILD_TYPE=Release
+  - cmake ../ -DCMAKE_CXX_STANDARD=$CXX_STANDARD -DCMAKE_BUILD_TYPE=Release
   - make all
   - ./travis_test
